# TCPChat

./: CMakeLists.txt  README.md
Networking/: CMakeLists.txt
Networking/include/Networking/: Sock.h  server.h
Networking/src/: Sock.cpp  server.cpp
TCPClient/: CMakeLists.txt  main.cpp
TCPServer/: CMakeLists.txt  main.cpp
